service/tests/tests/users/snapshots/integration_tests__tests__users__register__register-no_fields-headers.snap
---
source: tests/tests/users/register.rs
expression: response.headers()
---
"HTTP/1.1 422 Unprocessable Entity\ncontent-type: application/problem+json"
