service/tests/tests/users/snapshots/integration_tests__tests__users__register__register_duplicate_username-body.snap
---
source: tests/tests/users/register.rs
expression: response.to_json().unwrap()
---
{
  "status": 422,
  "title": "The username is already registered",
  "type": "tag:multiverse,2020:users/problems/duplicate_username"
}
