service/tests/tests/users/snapshots/integration_tests__tests__users__register__register_validation_failure-all_blank-headers.snap
---
source: tests/tests/users/register.rs
expression: response.headers()
---
"HTTP/1.1 422 Unprocessable Entity\nContent-Type: application/problem+json\nServer: Rocket"
